--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -12,4 +12,4 @@
 {% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
 {% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}"><i class="svg-icon googleplus"></i></a>{% endif %}
 {% if site.footer-links.playstore %}<a href="https://play.google.com/store/apps/dev?id={{ site.footer-links.playstore }}"><i class="svg-icon playstore"></i></a>{% endif %}
-<div><p><a href="https://rochagames.github.io/politica-de-privacidade-de-aplicativos/">Politica de Privacidade de Aplicativos</a></p></div>
+<div><p><a href="https://giveappsoficial.github.io/politica-de-privacidade-de-aplicativos/">Politica de Privacidade de Aplicativos</a></p></div>
